# AutoData

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
autodata/: __init__.py  config.py
autodata/data/: __init__.py  medmcqa_loader.py  schemas.py
autodata/diagnosis/: __init__.py  weakness_diagnoser.py
autodata/evaluation/: answer_parser.py  evaluator.py  metrics.py
autodata/experiments/: __init__.py  scaling.py  strategy_comparison.py
autodata/generation/: generator.py  prompts.py  providers.py
autodata/loop/: __init__.py  run_loop.py
autodata/mixture/: __init__.py  mixture_optimizer.py
autodata/planning/: __init__.py  data_planner.py  llm_agent.py
autodata/training/: __init__.py  qlora_utils.py  trainer.py
autodata/utils/: gpu.py  io.py  logging.py  seed.py
autodata/verification/: __init__.py  medical_critic.py  verifier.py
configs/: full_colab.yaml  prototype_colab.yaml  smoke_colab.yaml
notebooks/: AutoData_Colab_Demo.ipynb  Qwen_7B_100data_accept2.ipynb
scripts/: prepare_medmcqa.py  run_evaluation.py  run_full_loop.py  run_generation.py  run_mixture.py  run_strategy_comparison.py  run_training.py  run_verification.py
tests/: test_answer_parser.py  test_evaluator_torchao.py  test_generation_provider.py  test_metrics.py  test_mixture.py  test_planner.py  test_scaling.py  test_schemas.py  test_verifier.py
