[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autodata-agent"
version = "0.1.0"
description = "Evaluation-driven data generation and mixture optimization for medical LLM fine-tuning."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
colab = [
  "datasets>=2.18",
  "torch>=2.1",
  "transformers>=4.43",
  "accelerate>=0.31",
  "peft>=0.11",
  "trl>=0.9",
  "bitsandbytes>=0.43",
  "openai>=1.0",
  "tqdm>=4.66",
]

[tool.setuptools.packages.find]
include = ["autodata*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
